compiler/src/maths_parser.output
Nonterminals useless in grammar

   ELIPSIS


Terminals unused in grammar

   T_NORM_FLOAT
   T_EXP_FLOAT


Rules useless in grammar

  235 ELIPSIS: T_DOT T_DOT T_DOT


State 350 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: TRANSLATION_UNIT

    2 TRANSLATION_UNIT: EXTERNAL_DECLARATION
    3                 | TRANSLATION_UNIT EXTERNAL_DECLARATION

    4 EXTERNAL_DECLARATION: FUNCTION_DECLARATION
    5                     | DECLARATION

    6 FUNCTION_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT
    7                     | DECLARATOR COMPOUND_STATEMENT

    8 STATEMENT: LABELED_STATEMENT
    9          | COMPOUND_STATEMENT
   10          | EXPRESSION_STATEMENT
   11          | SELECTION_STATEMENT
   12          | ITERATION_STATEMENT
   13          | JUMP_STATEMENT

   14 LABELED_STATEMENT: IDENTIFIER T_COLON STATEMENT
   15                  | CASE CONSTANT_EXPRESSION T_COLON STATEMENT
   16                  | DEFAULT T_COLON STATEMENT

   17 DEFAULT: T_DEFAULT

   18 CASE: T_CASE

   19 COMPOUND_STATEMENT: T_LCURLY_BRACKET DECLARATION_LIST STATEMENT_LIST T_RCURLY_BRACKET
   20                   | T_LCURLY_BRACKET STATEMENT_LIST T_RCURLY_BRACKET
   21                   | T_LCURLY_BRACKET DECLARATION_LIST T_RCURLY_BRACKET
   22                   | T_ECURLY_BRACKETS

   23 DECLARATION_LIST: DECLARATION
   24                 | DECLARATION_LIST DECLARATION

   25 STATEMENT_LIST: STATEMENT
   26               | STATEMENT_LIST STATEMENT

   27 EXPRESSION_STATEMENT: EXPR T_SEMICOLON
   28                     | T_SEMICOLON

   29 SELECTION_STATEMENT: IF T_LBRACKET EXPR T_RBRACKET STATEMENT
   30                    | IF T_LBRACKET EXPR T_RBRACKET STATEMENT ELSE STATEMENT
   31                    | SWITCH T_LBRACKET EXPR T_RBRACKET STATEMENT

   32 SWITCH: T_SWITCH

   33 IF: T_IF

   34 ELSE: T_ELSE

   35 ITERATION_STATEMENT: WHILE T_LBRACKET EXPR T_RBRACKET STATEMENT
   36                    | DO STATEMENT WHILE T_LBRACKET EXPR T_RBRACKET T_SEMICOLON
   37                    | FOR T_LBRACKET EXPR T_SEMICOLON EXPR T_SEMICOLON EXPR T_RBRACKET STATEMENT
   38                    | FOR T_LBRACKET T_SEMICOLON EXPR T_SEMICOLON EXPR T_RBRACKET STATEMENT
   39                    | FOR T_LBRACKET EXPR T_SEMICOLON T_SEMICOLON EXPR T_RBRACKET STATEMENT
   40                    | FOR T_LBRACKET EXPR T_SEMICOLON EXPR T_SEMICOLON T_RBRACKET STATEMENT
   41                    | FOR T_LBRACKET T_SEMICOLON T_SEMICOLON EXPR T_RBRACKET STATEMENT
   42                    | FOR T_LBRACKET T_SEMICOLON EXPR T_SEMICOLON T_RBRACKET STATEMENT
   43                    | FOR T_LBRACKET EXPR T_SEMICOLON T_SEMICOLON T_RBRACKET STATEMENT
   44                    | FOR T_LBRACKET T_SEMICOLON T_SEMICOLON T_RBRACKET STATEMENT

   45 FOR: T_FOR

   46 WHILE: T_WHILE

   47 DO: T_DO

   48 JUMP_STATEMENT: GOTO IDENTIFIER T_SEMICOLON
   49               | T_CONTINUE T_SEMICOLON
   50               | T_BREAK T_SEMICOLON
   51               | RETURN EXPR T_SEMICOLON
   52               | RETURN T_SEMICOLON

   53 GOTO: T_GOTO

   54 RETURN: T_RETURN

   55 PRIMARY_EXPRESSION: IDENTIFIER
   56                   | CONSTANT
   57                   | T_STRING
   58                   | T_LBRACKET EXPR T_RBRACKET

   59 CONSTANT: T_DEC_INT
   60         | T_OCTAL_INT
   61         | T_HEX_INT

   62 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
   63                   | POSTFIX_EXPRESSION T_LSQ_BRACKET EXPR T_RSQ_BRACKET
   64                   | POSTFIX_EXPRESSION T_EMPTY_BRACKETS
   65                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET
   66                   | POSTFIX_EXPRESSION T_DOT IDENTIFIER
   67                   | POSTFIX_EXPRESSION T_ARROW IDENTIFIER
   68                   | POSTFIX_EXPRESSION T_INCREMENT
   69                   | POSTFIX_EXPRESSION T_DECREMENT

   70 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
   71                         | ARGUMENT_EXPRESSION_LIST T_COMMA ASSIGNMENT_EXPRESSION

   72 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   73                 | T_INCREMENT UNARY_EXPRESSION
   74                 | T_DECREMENT UNARY_EXPRESSION
   75                 | UNARY_OPERATOR CAST_EXPRESSION
   76                 | SIZE_OF UNARY_EXPRESSION
   77                 | SIZE_OF T_LBRACKET TYPE_NAME T_RBRACKET

   78 SIZE_OF: T_SIZEOF

   79 UNARY_OPERATOR: T_AND
   80               | T_TIMES
   81               | T_PLUS
   82               | T_MINUS
   83               | T_BITWISE_NOT
   84               | T_LOGICAL_NOT

   85 CAST_EXPRESSION: UNARY_EXPRESSION
   86                | T_LBRACKET TYPE_NAME T_RBRACKET CAST_EXPRESSION

   87 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   88                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
   89                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
   90                          | MULTIPLICATIVE_EXPRESSION T_MODULO CAST_EXPRESSION

   91 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   92                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   93                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   94 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   95                 | SHIFT_EXPRESSION T_LEFT_SHIFT ADDITIVE_EXPRESSION
   96                 | SHIFT_EXPRESSION T_RIGHT_SHIFT ADDITIVE_EXPRESSION

   97 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   98                      | RELATIONAL_EXPRESSION T_LESS_THAN SHIFT_EXPRESSION
   99                      | RELATIONAL_EXPRESSION T_GREATER_THAN SHIFT_EXPRESSION
  100                      | RELATIONAL_EXPRESSION T_LESS_THAN_OR_EQUAL_TO SHIFT_EXPRESSION
  101                      | RELATIONAL_EXPRESSION T_GREATER_THAN_OR_EQUAL_TO SHIFT_EXPRESSION

  102 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
  103                    | EQUALITY_EXPRESSION T_EQUALS_EQUALS RELATIONAL_EXPRESSION
  104                    | EQUALITY_EXPRESSION T_NOT_EQUALS_EQUALS RELATIONAL_EXPRESSION

  105 AND_EXPRESSION: EQUALITY_EXPRESSION
  106               | AND_EXPRESSION T_AND EQUALITY_EXPRESSION

  107 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
  108                        | EXCLUSIVE_OR_EXPRESSION T_EXPONENT AND_EXPRESSION

  109 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
  110                        | INCLUSIVE_OR_EXPRESSION T_OR EXCLUSIVE_OR_EXPRESSION

  111 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
  112                       | LOGICAL_AND_EXPRESSION T_AND_AND INCLUSIVE_OR_EXPRESSION

  113 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
  114                      | LOGICAL_OR_EXPRESSION T_OR_OR LOGICAL_AND_EXPRESSION

  115 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
  116                       | LOGICAL_OR_EXPRESSION T_QUESTION EXPR T_COLON CONDITIONAL_EXPRESSION

  117 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
  118                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

  119 ASSIGNMENT_OPERATOR: T_EQUALS
  120                    | T_TIMES_EQUALS
  121                    | T_DIVIDE_EQUALS
  122                    | T_MODULO_EQUALS
  123                    | T_PLUS_EQUALS
  124                    | T_MINUS_EQUALS
  125                    | T_LEFT_SHIFT_EQUALS
  126                    | T_RIGHT_SHIFT_EQUALS
  127                    | T_AND_EQUALS
  128                    | T_XOR_EQUALS
  129                    | T_OR_EQUALS

  130 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

  131 EXPR: ASSIGNMENT_EXPRESSION
  132     | EXPR T_COMMA ASSIGNMENT_EXPRESSION

  133 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON
  134            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SEMICOLON

  135 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER
  136                       | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS
  137                       | TYPE_SPECIFIER
  138                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS
  139                       | TYPE_QUALIFIER
  140                       | TYPE_QUALIFIER DECLARATION_SPECIFIERS

  141 INIT_DECLARATOR_LIST: INIT_DECLARATOR
  142                     | INIT_DECLARATOR_LIST T_COMMA INIT_DECLARATOR

  143 INIT_DECLARATOR: DECLARATOR
  144                | DECLARATOR T_EQUALS INITIALIZER

  145 STORAGE_CLASS_SPECIFIER: T_TYPEDEF
  146                        | T_EXTERN
  147                        | T_STATIC
  148                        | T_AUTO
  149                        | T_REGISTER

  150 TYPE_SPECIFIER: T_VOID
  151               | T_CHAR
  152               | T_SHORT
  153               | T_INT
  154               | T_LONG
  155               | T_FLOAT
  156               | T_DOUBLE
  157               | T_SIGNED
  158               | T_UNSIGNED
  159               | STRUCT_OR_UNION_SPECIFIER
  160               | ENUM_SPECIFIER
  161               | TYPEDEF_NAME

  162 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION IDENTIFIER
  163                          | STRUCT_OR_UNION T_LCURLY_BRACKET STRUCT_DECLARATION_LIST T_RCURLY_BRACKET
  164                          | STRUCT_OR_UNION IDENTIFIER T_LCURLY_BRACKET STRUCT_DECLARATION_LIST T_RCURLY_BRACKET

  165 STRUCT_OR_UNION: T_STRUCT
  166                | T_UNION

  167 STRUCT_DECLARATION_LIST: STRUCT_DECLARATION
  168                        | STRUCT_DECLARATION_LIST STRUCT_DECLARATION

  169 STRUCT_DECLARATION: SPECIFIER_QUALIFIER_LIST STRUCT_DECLARATOR_LIST

  170 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER
  171                         | TYPE_SPECIFIER SPECIFIER_QUALIFIER_LIST
  172                         | TYPE_QUALIFIER
  173                         | TYPE_QUALIFIER SPECIFIER_QUALIFIER_LIST

  174 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
  175                       | STRUCT_DECLARATOR_LIST T_COMMA STRUCT_DECLARATOR

  176 STRUCT_DECLARATOR: DECLARATOR
  177                  | DECLARATOR T_COLON CONSTANT_EXPRESSION
  178                  | T_COLON CONSTANT_EXPRESSION

  179 ENUM_SPECIFIER: ENUM IDENTIFIER
  180               | ENUM IDENTIFIER T_LCURLY_BRACKET ENUMERATOR_LIST T_RCURLY_BRACKET
  181               | ENUM T_LCURLY_BRACKET ENUMERATOR_LIST T_RCURLY_BRACKET

  182 ENUM: T_ENUM

  183 ENUMERATOR_LIST: ENUMERATOR
  184                | ENUMERATOR_LIST T_COMMA ENUMERATOR

  185 ENUMERATOR: ENUM_CONSTANT
  186           | ENUM_CONSTANT T_EQUALS CONSTANT_EXPRESSION

  187 ENUM_CONSTANT: T_ENUM_CONSTANT

  188 TYPE_QUALIFIER: T_CONST
  189               | T_VOLATILE

  190 DECLARATOR: DIRECT_DECLARATOR
  191           | POINTER DIRECT_DECLARATOR

  192 DIRECT_DECLARATOR: IDENTIFIER
  193                  | T_LBRACKET DECLARATOR T_RBRACKET
  194                  | DIRECT_DECLARATOR T_ESQ_BRACKETS
  195                  | DIRECT_DECLARATOR T_LSQ_BRACKET CONSTANT_EXPRESSION T_RSQ_BRACKET
  196                  | DIRECT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
  197                  | DIRECT_DECLARATOR T_EMPTY_BRACKETS
  198                  | DIRECT_DECLARATOR T_LBRACKET IDENTIFIER_LIST T_RBRACKET

  199 POINTER: DEREFERENCE
  200        | DEREFERENCE TYPE_QUALIFIER_LIST
  201        | DEREFERENCE POINTER
  202        | DEREFERENCE TYPE_QUALIFIER_LIST POINTER

  203 DEREFERENCE: T_DEREFERENCE

  204 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER
  205                    | TYPE_QUALIFIER_LIST TYPE_QUALIFIER

  206 PARAMETER_TYPE_LIST: PARAMETER_LIST

  207 PARAMETER_LIST: PARAMETER_DECLARATION
  208               | PARAMETER_LIST T_COMMA PARAMETER_DECLARATION

  209 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR
  210                      | DECLARATION_SPECIFIERS
  211                      | DECLARATION_SPECIFIERS ABSTRACT_DECLARATOR

  212 IDENTIFIER_LIST: IDENTIFIER
  213                | IDENTIFIER_LIST T_COMMA IDENTIFIER

  214 IDENTIFIER: T_IDENTIFIER

  215 TYPE_NAME: SPECIFIER_QUALIFIER_LIST
  216          | SPECIFIER_QUALIFIER_LIST ABSTRACT_DECLARATOR

  217 ABSTRACT_DECLARATOR: POINTER
  218                    | POINTER DIRECT_ABSTRACT_DECLARATOR
  219                    | DIRECT_ABSTRACT_DECLARATOR

  220 DIRECT_ABSTRACT_DECLARATOR: T_LBRACKET ABSTRACT_DECLARATOR T_RBRACKET
  221                           | DIRECT_ABSTRACT_DECLARATOR T_LSQ_BRACKET CONSTANT_EXPRESSION T_RSQ_BRACKET
  222                           | T_LSQ_BRACKET CONSTANT_EXPRESSION T_RSQ_BRACKET
  223                           | DIRECT_ABSTRACT_DECLARATOR T_ESQ_BRACKETS
  224                           | T_ESQ_BRACKETS
  225                           | DIRECT_ABSTRACT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
  226                           | T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
  227                           | DIRECT_ABSTRACT_DECLARATOR T_EMPTY_BRACKETS
  228                           | T_EMPTY_BRACKETS

  229 TYPEDEF_NAME: T_CUSTOM_TYPE

  230 INITIALIZER: ASSIGNMENT_EXPRESSION
  231            | T_LCURLY_BRACKET INITIALIZER_LIST T_RCURLY_BRACKET
  232            | T_LCURLY_BRACKET INITIALIZER_LIST T_COMMA T_RCURLY_BRACKET

  233 INITIALIZER_LIST: INITIALIZER
  234                 | INITIALIZER_LIST T_COMMA INITIALIZER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_AUTO (258) 148
T_BREAK (259) 50
T_CASE (260) 18
T_CHAR (261) 151
T_CONST (262) 188
T_CONTINUE (263) 49
T_DEFAULT (264) 17
T_DO (265) 47
T_DOUBLE (266) 156
T_ELSE (267) 34
T_ENUM (268) 182
T_EXTERN (269) 146
T_FLOAT (270) 155
T_FOR (271) 45
T_GOTO (272) 53
T_IF (273) 33
T_INT (274) 153
T_LONG (275) 154
T_REGISTER (276) 149
T_RETURN (277) 54
T_SHORT (278) 152
T_SIGNED (279) 157
T_SIZEOF (280) 78
T_STATIC (281) 147
T_STRUCT (282) 165
T_SWITCH (283) 32
T_TYPEDEF (284) 145
T_UNION (285) 166
T_UNSIGNED (286) 158
T_VOID (287) 150
T_VOLATILE (288) 189
T_WHILE (289) 46
T_TIMES (290) 80 88
T_DIVIDE (291) 89
T_PLUS (292) 81 92
T_MINUS (293) 82 93
T_EXPONENT (294) 108
T_DECREMENT (295) 69 74
T_INCREMENT (296) 68 73
T_LESS_THAN (297) 98
T_GREATER_THAN (298) 99
T_EQUALS (299) 119 144 186
T_AND (300) 79 106
T_OR (301) 110
T_BITWISE_NOT (302) 83
T_LOGICAL_NOT (303) 84
T_AND_AND (304) 112
T_OR_OR (305) 114
T_MODULO_EQUALS (306) 122
T_LEFT_SHIFT_EQUALS (307) 125
T_RIGHT_SHIFT_EQUALS (308) 126
T_NOT_EQUALS_EQUALS (309) 104
T_EQUALS_EQUALS (310) 103
T_PLUS_EQUALS (311) 123
T_MINUS_EQUALS (312) 124
T_TIMES_EQUALS (313) 120
T_DIVIDE_EQUALS (314) 121
T_LESS_THAN_OR_EQUAL_TO (315) 100
T_GREATER_THAN_OR_EQUAL_TO (316) 101
T_AND_EQUALS (317) 127
T_OR_EQUALS (318) 129
T_XOR_EQUALS (319) 128
T_ARROW (320) 67
T_RIGHT_SHIFT (321) 96
T_LEFT_SHIFT (322) 95
T_MODULO (323) 90
T_COMMA (324) 71 132 142 175 184 208 213 232 234
T_DOT (325) 66
T_COLON (326) 14 15 16 116 177 178
T_SEMICOLON (327) 27 28 36 37 38 39 40 41 42 43 44 48 49 50 51 52 133
    134
T_QUESTION (328) 116
T_LBRACKET (329) 29 30 31 35 36 37 38 39 40 41 42 43 44 58 65 77 86
    193 196 198 220 225 226
T_RBRACKET (330) 29 30 31 35 36 37 38 39 40 41 42 43 44 58 65 77 86
    193 196 198 220 225 226
T_LSQ_BRACKET (331) 63 195 221 222
T_RSQ_BRACKET (332) 63 195 221 222
T_RCURLY_BRACKET (333) 19 20 21 163 164 180 181 231 232
T_LCURLY_BRACKET (334) 19 20 21 163 164 180 181 231 232
T_EMPTY_BRACKETS (335) 64 197 227 228
T_ECURLY_BRACKETS (336) 22
T_ESQ_BRACKETS (337) 194 223 224
T_IDENTIFIER (338) 214
T_STRING (339) 57
T_DEC_INT (340) 59
T_OCTAL_INT (341) 60
T_HEX_INT (342) 61
T_NORM_FLOAT (343)
T_EXP_FLOAT (344)
T_DEREFERENCE (345) 203
T_CUSTOM_TYPE (346) 229
T_ENUM_CONSTANT (347) 187


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
PROGRAM (94)
    on left: 1, on right: 0
TRANSLATION_UNIT (95)
    on left: 2 3, on right: 1 3
EXTERNAL_DECLARATION (96)
    on left: 4 5, on right: 2 3
FUNCTION_DECLARATION (97)
    on left: 6 7, on right: 4
STATEMENT (98)
    on left: 8 9 10 11 12 13, on right: 14 15 16 25 26 29 30 31 35
    36 37 38 39 40 41 42 43 44
LABELED_STATEMENT (99)
    on left: 14 15 16, on right: 8
DEFAULT (100)
    on left: 17, on right: 16
CASE (101)
    on left: 18, on right: 15
COMPOUND_STATEMENT (102)
    on left: 19 20 21 22, on right: 6 7 9
DECLARATION_LIST (103)
    on left: 23 24, on right: 19 21 24
STATEMENT_LIST (104)
    on left: 25 26, on right: 19 20 26
EXPRESSION_STATEMENT (105)
    on left: 27 28, on right: 10
SELECTION_STATEMENT (106)
    on left: 29 30 31, on right: 11
SWITCH (107)
    on left: 32, on right: 31
IF (108)
    on left: 33, on right: 29 30
ELSE (109)
    on left: 34, on right: 30
ITERATION_STATEMENT (110)
    on left: 35 36 37 38 39 40 41 42 43 44, on right: 12
FOR (111)
    on left: 45, on right: 37 38 39 40 41 42 43 44
WHILE (112)
    on left: 46, on right: 35 36
DO (113)
    on left: 47, on right: 36
JUMP_STATEMENT (114)
    on left: 48 49 50 51 52, on right: 13
GOTO (115)
    on left: 53, on right: 48
RETURN (116)
    on left: 54, on right: 51 52
PRIMARY_EXPRESSION (117)
    on left: 55 56 57 58, on right: 62
CONSTANT (118)
    on left: 59 60 61, on right: 56
POSTFIX_EXPRESSION (119)
    on left: 62 63 64 65 66 67 68 69, on right: 63 64 65 66 67 68 69
    72
ARGUMENT_EXPRESSION_LIST (120)
    on left: 70 71, on right: 65 71
UNARY_EXPRESSION (121)
    on left: 72 73 74 75 76 77, on right: 73 74 76 85 118
SIZE_OF (122)
    on left: 78, on right: 76 77
UNARY_OPERATOR (123)
    on left: 79 80 81 82 83 84, on right: 75
CAST_EXPRESSION (124)
    on left: 85 86, on right: 75 86 87 88 89 90
MULTIPLICATIVE_EXPRESSION (125)
    on left: 87 88 89 90, on right: 88 89 90 91 92 93
ADDITIVE_EXPRESSION (126)
    on left: 91 92 93, on right: 92 93 94 95 96
SHIFT_EXPRESSION (127)
    on left: 94 95 96, on right: 95 96 97 98 99 100 101
RELATIONAL_EXPRESSION (128)
    on left: 97 98 99 100 101, on right: 98 99 100 101 102 103 104
EQUALITY_EXPRESSION (129)
    on left: 102 103 104, on right: 103 104 105 106
AND_EXPRESSION (130)
    on left: 105 106, on right: 106 107 108
EXCLUSIVE_OR_EXPRESSION (131)
    on left: 107 108, on right: 108 109 110
INCLUSIVE_OR_EXPRESSION (132)
    on left: 109 110, on right: 110 111 112
LOGICAL_AND_EXPRESSION (133)
    on left: 111 112, on right: 112 113 114
LOGICAL_OR_EXPRESSION (134)
    on left: 113 114, on right: 114 115 116
CONDITIONAL_EXPRESSION (135)
    on left: 115 116, on right: 116 117 130
ASSIGNMENT_EXPRESSION (136)
    on left: 117 118, on right: 70 71 118 131 132 230
ASSIGNMENT_OPERATOR (137)
    on left: 119 120 121 122 123 124 125 126 127 128 129, on right:
    118
CONSTANT_EXPRESSION (138)
    on left: 130, on right: 15 177 178 186 195 221 222
EXPR (139)
    on left: 131 132, on right: 27 29 30 31 35 36 37 38 39 40 41 42
    43 51 58 63 116 132
DECLARATION (140)
    on left: 133 134, on right: 5 23 24
DECLARATION_SPECIFIERS (141)
    on left: 135 136 137 138 139 140, on right: 6 133 134 136 138 140
    209 210 211
INIT_DECLARATOR_LIST (142)
    on left: 141 142, on right: 134 142
INIT_DECLARATOR (143)
    on left: 143 144, on right: 141 142
STORAGE_CLASS_SPECIFIER (144)
    on left: 145 146 147 148 149, on right: 135 136
TYPE_SPECIFIER (145)
    on left: 150 151 152 153 154 155 156 157 158 159 160 161, on right:
    137 138 170 171
STRUCT_OR_UNION_SPECIFIER (146)
    on left: 162 163 164, on right: 159
STRUCT_OR_UNION (147)
    on left: 165 166, on right: 162 163 164
STRUCT_DECLARATION_LIST (148)
    on left: 167 168, on right: 163 164 168
STRUCT_DECLARATION (149)
    on left: 169, on right: 167 168
SPECIFIER_QUALIFIER_LIST (150)
    on left: 170 171 172 173, on right: 169 171 173 215 216
STRUCT_DECLARATOR_LIST (151)
    on left: 174 175, on right: 169 175
STRUCT_DECLARATOR (152)
    on left: 176 177 178, on right: 174 175
ENUM_SPECIFIER (153)
    on left: 179 180 181, on right: 160
ENUM (154)
    on left: 182, on right: 179 180 181
ENUMERATOR_LIST (155)
    on left: 183 184, on right: 180 181 184
ENUMERATOR (156)
    on left: 185 186, on right: 183 184
ENUM_CONSTANT (157)
    on left: 187, on right: 185 186
TYPE_QUALIFIER (158)
    on left: 188 189, on right: 139 140 172 173 204 205
DECLARATOR (159)
    on left: 190 191, on right: 6 7 143 144 176 177 193 209
DIRECT_DECLARATOR (160)
    on left: 192 193 194 195 196 197 198, on right: 190 191 194 195
    196 197 198
POINTER (161)
    on left: 199 200 201 202, on right: 191 201 202 217 218
DEREFERENCE (162)
    on left: 203, on right: 199 200 201 202
TYPE_QUALIFIER_LIST (163)
    on left: 204 205, on right: 200 202 205
PARAMETER_TYPE_LIST (164)
    on left: 206, on right: 196 225 226
PARAMETER_LIST (165)
    on left: 207 208, on right: 206 208
PARAMETER_DECLARATION (166)
    on left: 209 210 211, on right: 207 208
IDENTIFIER_LIST (167)
    on left: 212 213, on right: 198 213
IDENTIFIER (168)
    on left: 214, on right: 14 48 55 66 67 162 164 179 180 192 212
    213
TYPE_NAME (169)
    on left: 215 216, on right: 77 86
ABSTRACT_DECLARATOR (170)
    on left: 217 218 219, on right: 211 216 220
DIRECT_ABSTRACT_DECLARATOR (171)
    on left: 220 221 222 223 224 225 226 227 228, on right: 218 219
    221 223 225 227
TYPEDEF_NAME (172)
    on left: 229, on right: 161
INITIALIZER (173)
    on left: 230 231 232, on right: 144 233 234
INITIALIZER_LIST (174)
    on left: 233 234, on right: 231 232 234


State 0

    0 $accept: . PROGRAM $end

    T_AUTO         shift, and go to state 1
    T_CHAR         shift, and go to state 2
    T_CONST        shift, and go to state 3
    T_DOUBLE       shift, and go to state 4
    T_ENUM         shift, and go to state 5
    T_EXTERN       shift, and go to state 6
    T_FLOAT        shift, and go to state 7
    T_INT          shift, and go to state 8
    T_LONG         shift, and go to state 9
    T_REGISTER     shift, and go to state 10
    T_SHORT        shift, and go to state 11
    T_SIGNED       shift, and go to state 12
    T_STATIC       shift, and go to state 13
    T_STRUCT       shift, and go to state 14
    T_TYPEDEF      shift, and go to state 15
    T_UNION        shift, and go to state 16
    T_UNSIGNED     shift, and go to state 17
    T_VOID         shift, and go to state 18
    T_VOLATILE     shift, and go to state 19
    T_LBRACKET     shift, and go to state 20
    T_IDENTIFIER   shift, and go to state 21
    T_DEREFERENCE  shift, and go to state 22
    T_CUSTOM_TYPE  shift, and go to state 23

    PROGRAM                    go to state 24
    TRANSLATION_UNIT           go to state 25
    EXTERNAL_DECLARATION       go to state 26
    FUNCTION_DECLARATION       go to state 27
    DECLARATION                go to state 28
    DECLARATION_SPECIFIERS     go to state 29
    STORAGE_CLASS_SPECIFIER    go to state 30
    TYPE_SPECIFIER             go to state 31
    STRUCT_OR_UNION_SPECIFIER  go to state 32
    STRUCT_OR_UNION            go to state 33
    ENUM_SPECIFIER             go to state 34
    ENUM                       go to state 35
    TYPE_QUALIFIER             go to state 36
    DECLARATOR                 go to state 37
    DIRECT_DECLARATOR          go to state 38
    POINTER                    go to state 39
    DEREFERENCE                go to state 40
    IDENTIFIER                 go to state 41
    TYPEDEF_NAME               go to state 42


State 1

  148 STORAGE_CLASS_SPECIFIER: T_AUTO .

    $default  reduce using rule 148 (STORAGE_CLASS_SPECIFIER)


State 2

  151 TYPE_SPECIFIER: T_CHAR .

    $default  reduce using rule 151 (TYPE_SPECIFIER)


State 3

  188 TYPE_QUALIFIER: T_CONST .

    $default  reduce using rule 188 (TYPE_QUALIFIER)


State 4

  156 TYPE_SPECIFIER: T_DOUBLE .

    $default  reduce using rule 156 (TYPE_SPECIFIER)


State 5

  182 ENUM: T_ENUM .

    $default  reduce using rule 182 (ENUM)


State 6

  146 STORAGE_CLASS_SPECIFIER: T_EXTERN .

    $default  reduce using rule 146 (STORAGE_CLASS_SPECIFIER)


State 7

  155 TYPE_SPECIFIER: T_FLOAT .

    $default  reduce using rule 155 (TYPE_SPECIFIER)


State 8

  153 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 153 (TYPE_SPECIFIER)


State 9

  154 TYPE_SPECIFIER: T_LONG .

    $default  reduce using rule 154 (TYPE_SPECIFIER)


State 10

  149 STORAGE_CLASS_SPECIFIER: T_REGISTER .

    $default  reduce using rule 149 (STORAGE_CLASS_SPECIFIER)


State 11

  152 TYPE_SPECIFIER: T_SHORT .

    $default  reduce using rule 152 (TYPE_SPECIFIER)


State 12

  157 TYPE_SPECIFIER: T_SIGNED .

    $default  reduce using rule 157 (TYPE_SPECIFIER)


State 13

  147 STORAGE_CLASS_SPECIFIER: T_STATIC .

    $default  reduce using rule 147 (STORAGE_CLASS_SPECIFIER)


State 14

  165 STRUCT_OR_UNION: T_STRUCT .

    $default  reduce using rule 165 (STRUCT_OR_UNION)


State 15

  145 STORAGE_CLASS_SPECIFIER: T_TYPEDEF .

    $default  reduce using rule 145 (STORAGE_CLASS_SPECIFIER)


State 16

  166 STRUCT_OR_UNION: T_UNION .

    $default  reduce using rule 166 (STRUCT_OR_UNION)


State 17

  158 TYPE_SPECIFIER: T_UNSIGNED .

    $default  reduce using rule 158 (TYPE_SPECIFIER)


State 18

  150 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 150 (TYPE_SPECIFIER)


State 19

  189 TYPE_QUALIFIER: T_VOLATILE .

    $default  reduce using rule 189 (TYPE_QUALIFIER)


State 20

  193 DIRECT_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_LBRACKET     shift, and go to state 20
    T_IDENTIFIER   shift, and go to state 21
    T_DEREFERENCE  shift, and go to state 22

    DECLARATOR         go to state 43
    DIRECT_DECLARATOR  go to state 38
    POINTER            go to state 39
    DEREFERENCE        go to state 40
    IDENTIFIER         go to state 41


State 21

  214 IDENTIFIER: T_IDENTIFIER .

    $default  reduce using rule 214 (IDENTIFIER)


State 22

  203 DEREFERENCE: T_DEREFERENCE .

    $default  reduce using rule 203 (DEREFERENCE)


State 23

  229 TYPEDEF_NAME: T_CUSTOM_TYPE .

    $default  reduce using rule 229 (TYPEDEF_NAME)


State 24

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 44


State 25

    1 PROGRAM: TRANSLATION_UNIT .
    3 TRANSLATION_UNIT: TRANSLATION_UNIT . EXTERNAL_DECLARATION
